<resources>
    <string name="app_name">TamanPempek</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="delivery">Jasa pengiriman</string>
    <string name="resi">Nomor resi</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="role">Mendaftar sebagai</string>
    <string name="link_register">Belum memiliki akun? Register disini.</string>
    <string name="link_login">Sudah memiliki akun? Login disini.</string>
    <string name="dashboard">Dashboard</string>
    <string name="pesanan">Pesanan</string>
    <string name="rekening">Rekening</string>
    <string name="payment_rekening">Rekening Pembayaran :</string>
    <string name="profil">Profil</string>
    <string name="setting">Setting</string>
    <string name="add_product">Tambah Produk</string>
    <string name="edit_product">Edit Produk</string>
    <string name="delete_product">Hapus Produk</string>
    <string name="add_rekening">Tambah Rekening</string>
    <string name="edit_rekening">Edit Rekening</string>
    <string name="delete_rekening">Hapus Rekening</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="delete_profile">Hapus Profil</string>
    <string name="edit_user">Edit Pengguna</string>
    <string name="delete_user">Hapus Pengguna</string>
    <string name="payment">Transaksi</string>
    <string name="product">Produk</string>
    <string name="category1">All Menu</string>
    <string name="category2">Pempek</string>
    <string name="category3">Lainnya</string>
    <string name="history1">Review</string>
    <string name="history2">Menunggu dikirim</string>
    <string name="history3">Dikirim</string>
    <string name="history4">Selesai</string>
    <string name="history5">Batal</string>
    <string name="history6">Ditolak</string>
    <string name="description">Deskripsi</string>
    <string name="price">Harga</string>
    <string name="quantity">Kuantitas</string>
    <string name="stock">Stock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_image">Upload Image</string>
    <string name="category">Kategori</string>
    <string name="detail_product">Detail Produk</string>
    <string name="detail_user">Detail Pengguna</string>
    <string name="detail_history">Detail Riwayat</string>
    <string name="detail_payment">Detail Transaksi</string>
    <string name="detail_order">Detail Pesanan</string>
    <string name="product_template">Produk: %1$s</string>
    <string name="name_template">Nama: %1$s</string>
    <string name="stock_template">Stok: %1$s</string>
    <string name="payment_status_template">Status: %1$s</string>
    <string name="delivery_template">Jasa pengiriman: %1$s</string>
    <string name="resi_template">Nomor resi: %1$s</string>
    <string name="seller_template">Penjual: %1$s</string>
    <string name="user_template">Pembeli: %1$s</string>
    <string name="category_template">Kategori: %1$s</string>
    <string name="price_template">Total harga: %1$s</string>
    <string name="address_template">Alamat pengiriman: %1$s</string>
    <string name="detail_rekening">Detail Rekening</string>
    <string name="type_template">Bank: %1$s</string>
    <string name="number_template">Nomor: %1$s</string>
    <string name="email_template">Email: %1$s</string>
    <string name="password_template">Password: %1$s</string>
    <string name="whatsapp_template">Whatsapp: %1$s</string>
    <string name="gender_template">Gender: %1$s</string>
    <string name="role_template">Mendaftar sebagai: %1$s</string>
    <string name="quantity_template">Jumlah: %1$s</string>
    <string name="success_upload_image">Berhasil memilih gambar</string>
    <string name="bank">Bank</string>
    <string name="number">Nomor Rekening</string>
    <string name="logout">Logout</string>
    <string name="edit_setting">Edit Setting</string>
    <string name="tentang_kami">Tentang kami</string>
    <string name="kontak_kami">Kontak kami</string>
    <string name="dummy">Taman Pempek adalah marketplace khusus pempek khas Palembang yang menawarkan berbagai pilihan pempek yang lezat. Temukan cita rasa otentik dengan beragam jenis pempek berkualitas hanya di Taman Pempek.</string>
    <string name="no_product">Tidak ada produk, silakan tambah produk.</string>
    <string name="no_product_user">Belum ada produk.</string>
    <string name="no_history_user">Belum ada riwayat transaksi.</string>
    <string name="no_cart_user">Tidak ada produk yang dimasukkan ke keranjang.</string>
    <string name="btn_cart">Masukkan keranjang</string>
    <string name="cart">Keranjang</string>
    <string name="user">Pengguna</string>
    <string name="history">Riwayat</string>
    <string name="order">Pesanan</string>
    <string name="delete">Delete</string>
    <string name="checkout">Checkout</string>
    <string name="pay">Bayar</string>
    <string name="finish_transaction">Pesanan selesai</string>
    <string name="confirm_transaction">Pesanan dikonfirmasi</string>
    <string name="reject_transaction">Pesanan ditolak</string>
    <string name="cancel">Batal</string>
    <string name="upload_image_rekening">Upload bukti transfer</string>
    <string name="address">Alamat pengiriman</string>
    <string name="send">Kirim Pesanan</string>
    <string name="seller">Penjual</string>
    <string name="buyer">Pembeli</string>
    <string-array name="category_array">
        <item>Pempek</item>
        <item>Lainnya</item>
    </string-array>
    <string name="title_activity_detail_payment_admin">DetailPaymentAdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="bukti_transfer">Bukti transfer:</string>

</resources>
