<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/keranjang"
        android:title="@string/cart"
        android:icon="@drawable/baseline_shopping_cart_24"/>
    <item
        android:id="@+id/riwayat"
        android:title="@string/history"
        android:icon="@drawable/baseline_history_24"/>
    <item
        android:id="@+id/profil"
        android:title="@string/profil"
        android:icon="@drawable/baseline_person_24"/>
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/baseline_settings_24"/>
</menu>