<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard_admin"
        android:title="@string/dashboard"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/user_admin"
        android:title="@string/user"
        android:icon="@drawable/baseline_supervisor_account_24"/>
    <item
        android:id="@+id/payment_admin"
        android:title="@string/payment"
        android:icon="@drawable/baseline_payments_24"/>
    <item
        android:id="@+id/profile_admin"
        android:title="@string/profil"
        android:icon="@drawable/baseline_person_24"/>
    <item
        android:id="@+id/setting_admin"
        android:title="@string/setting"
        android:icon="@drawable/baseline_settings_24"/>
</menu>