<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.admin.users.DetailUserAdminActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="85dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_profile"
                    android:text="@string/detail_user"
                    android:fontFamily="@font/gothicextrabold"
                    android:textColor="@color/orange"
                    android:textSize="37sp"
                    android:layout_marginTop="70dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_name"
                    android:text="@string/name_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="27sp"
                    android:layout_margin="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_profile"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_email"
                    android:text="@string/email_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_password"
                    android:text="@string/password_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_email"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_whatsapp"
                    android:text="@string/whatsapp_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_password"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_gender"
                    android:text="@string/gender_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_whatsapp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_role"
                    android:text="@string/role_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_gender"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_rekening"
                    android:text="@string/payment_rekening"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_price"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_rekening_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_rekening"
                    tools:listitem="@layout/item_rekening" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_edit_user"
                        android:alpha="1"
                        android:layout_width="128dp"
                        android:layout_height="64dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/gothicsemibold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/orange"
                        android:text="@string/edit_user"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_role" />
                    <Button
                        android:id="@+id/btn_delete_user"
                        android:alpha="1"
                        android:layout_width="128dp"
                        android:layout_height="64dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/gothicsemibold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/red"
                        android:text="@string/delete_user"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_role" />

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>