<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.seller.order.DetailOrderSellerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="85dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_profile"
                    android:text="@string/detail_order"
                    android:fontFamily="@font/gothicextrabold"
                    android:textColor="@color/blue"
                    android:textSize="37sp"
                    android:layout_marginTop="70dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_product"
                    android:text="@string/product_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_profile"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_user"
                    android:text="@string/user_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_profile"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_quantity"
                    android:text="@string/quantity_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_user"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_price"
                    android:text="@string/price_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_payment"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_address"
                    android:text="@string/address_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_price"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_whatsapp"
                    android:text="@string/whatsapp_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_address"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_payment_status"
                    android:text="@string/payment_status_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_whatsapp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_delivery_name"
                    android:text="@string/delivery_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_whatsapp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_resi"
                    android:text="@string/resi_template"
                    android:fontFamily="@font/gothicbold"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_payment_status"/>

                <TextView
                    android:id="@+id/tv_delivery"
                    android:alpha="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/delivery"
                    android:textSize="17sp"
                    android:fontFamily="@font/gothicregular"
                    android:textColor="@color/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_payment_status" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etl_delivery"
                    android:alpha="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_delivery">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_delivery"
                        android:textColor="@color/blue"
                        android:background="@color/yellow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_resi_number"
                    android:alpha="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/resi"
                    android:textSize="17sp"
                    android:fontFamily="@font/gothicregular"
                    android:textColor="@color/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_payment_status" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etl_resi_number"
                    android:alpha="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_resi_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_resi_number"
                        android:textColor="@color/blue"
                        android:background="@color/yellow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_send"
                        android:alpha="1"
                        android:layout_width="128dp"
                        android:layout_height="64dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/gothicsemibold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/blue"
                        android:text="@string/send"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_main_title" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>